# Pronto_Estimator

./: .gitignore  Dockerfile  Pronto_Data_Analysis.m  README.md  Tuning_Pronto_Exp.txt  devcontainer.json  docker_build.bash  how_to_pronto_test.md  new_bash.bash  run.bash
Pronto_Tuning/Pronto_Matlab_analysis/: Pronto_Data_Analysis.asv  Pronto_Data_Analysis.m
any_msgs/: CMakeLists.txt  package.xml
any_msgs/msg/: ImuWithTrigger.msg  PointContact.msg  State.msg
anymal_msgs/: CMakeLists.txt  package.xml
anymal_msgs/msg/: AnymalState.msg  Contact.msg  GaitPatterns.msg
anymal_msgs/srv/: ResetStateEstimator.srv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
pronto_core/: CMakeLists.txt
pronto_core/include/pronto_core/: definitions.hpp  ins_module.hpp  rbis.hpp  state_est.hpp
pronto_core/src/: ins_module.cpp  rbis.cpp  rbis_update_interface.cpp  rigidbody.cpp  rotations.cpp  state_est.cpp
pronto_estimator_quadruped/: CMakeLists.txt  package.xml
pronto_estimator_quadruped/config/: anymal_c.yaml  solo12.yaml  state_estimator.yaml
pronto_estimator_quadruped/include/pronto_estimator_quadruped/: dynamics.hpp  feet_contact_forces.hpp  feet_jacobians.hpp  forward_kinematics.hpp  pronto_node.hpp
pronto_estimator_quadruped/launch/: pronto_estimator.launch.py
pronto_estimator_quadruped/rviz/: anymal_config.rviz  mulinex_config.rviz  pronto.rviz  pronto2.rviz  pronto_prova.rviz  pronto_solo12.rviz  solo12_config.rviz
pronto_estimator_quadruped/src/: dynamics.cpp  feet_contact_forces.cpp  feet_jacobians.cpp  forward_kinematics.cpp  link_states_republisher.cpp  pronto_estimator.cpp
pronto_quadruped/: CMakeLists.txt
pronto_quadruped/include/pronto_quadruped/: ImuBiasLock.hpp  LegOdometer.hpp  StanceEstimator.hpp
pronto_quadruped/src/: DynamicStanceEstimator.cpp  ImuBiasLock.cpp  LegOdometer.cpp  StanceEstimator.cpp
pronto_quadruped_commons/include/pronto_quadruped_commons/: declarations.h  feet_jacobians.h  forward_kinematics.h  leg_data_map.h
pronto_quadruped_ros/: CMakeLists.txt  package.xml
pronto_quadruped_ros/include/pronto_quadruped_ros/: bias_lock_handler_ros.hpp  conversions.hpp  legodo_handler_ros.hpp  pronto_mammal_utilities.hpp  quad_model_parser.hpp
pronto_quadruped_ros/src/: bias_lock_handler_ros.cpp  conversions.cpp  leg_odometer_ros.cpp  legodo_handler_ros.cpp  pronto_mammal_utilities.cpp  quad_model_parser.cpp  stance_estimator_ros.cpp
pronto_ros/: CMakeLists.txt  package.xml
pronto_ros/include/pronto_ros/: pronto_ros_conversions.hpp  ros_frontend.hpp
pronto_ros/src/: ins_ros_handler.cpp  pose_msg_ros_handler.cpp  pronto_ros_conversions.cpp  ros_frontend.cpp  scan_matcher_ros_handler.cpp
pronto_ros2_controller/: CMakeLists.txt
pronto_ros2_controller/include/pronto_ros2_controller/: exteroceptive_sensor_sensor_manager.hpp  gazebo_mt.hpp  (+4 more)
pronto_ros2_controller/src/: exteroceptive_sensor_sensor_manager.cpp  gazebo_mt.cpp  legodom_manager.cpp  pronto_controller.cpp  proprioceptive_sensor_manager.cpp
pronto_ros2_node/: CMakeLists.txt  README.md  package.xml
pronto_ros2_node/Experiments/: convert.yaml  linear_vel_layout.xml
pronto_ros2_node/config/: anymal_c_sim.yaml  omni_car.yaml  omnicar_tune_1.yaml  omnicar_tune_2.yaml  omnicar_tune_3.yaml  pronto_mulinex.yaml  solo12.yaml
pronto_ros2_node/launch/: bench_pronto.launch.py  pova.launch.py  pronto_bag_test.launch.py  pronto_mul_exp.launch.py  pronto_node.launch.py
pronto_ros2_node/src/: pronto_ros2_node.cpp  qualysis_mt.cpp  wheeled_odometry.cpp
pronto_solo12/: CMakeLists.txt
pronto_solo12/config/: state_estimator.yaml
pronto_solo12/launch/: pronto_estimator.launch.py  pronto_estimator_with_solo.launch.py
pronto_solo12/src/: dynamics.cpp  feet_contact_forces.cpp  feet_jacobians.cpp  forward_kinematics.cpp  pronto_estimator.cpp  pronto_node.cpp
pronto_tuning/config/: Exp_1_cmd.yaml  Exp_1_lateral.yaml  Exp_3_cmd.yaml  Exp_o_cmd.yaml  tuning_node_param.yaml
pronto_tuning/launch/: command_tuning.launch.py  experiments_pronto.launch.py  omnicar_exp.launch.py  omnicar_exp_teleop.launch.py
pronto_tuning/src/: command_node.cpp  tuning_node.cpp
src/matlab_msg_gen/glnxa64/src/pronto_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
src/matlab_msg_gen/glnxa64/src/pronto_msgs/include/pronto_msgs/: visibility_control.h
src/matlab_msg_gen/glnxa64/src/pronto_msgs/m/+ros/+internal/+ros2/+custommessages/+pronto_msgs/: bipedForceTorqueSensors.m  filterState.m  gPSData.m  jointStateWithAcceleration.m  pronto_msgs_msg_BipedForceTorqueSensors_1To2_Converter.m  pronto_msgs_msg_BipedForceTorqueSensors_2To1_Converter.m  pronto_msgs_msg_ControllerFootContact_1To2_Converter.m  pronto_msgs_msg_FilterState_1To2_Converter.m  pronto_msgs_msg_FilterState_2To1_Converter.m  pronto_msgs_msg_GPSData_1To2_Converter.m  pronto_msgs_msg_GPSData_2To1_Converter.m  pronto_msgs_msg_IndexedMeasurement_1To2_Converter.m  pronto_msgs_msg_JointStateWithAcceleration_1To2_Converter.m  pronto_msgs_msg_JointStateWithAcceleration_2To1_Converter.m  pronto_msgs_msg_LidarOdometryUpdate_1To2_Converter.m  pronto_msgs_msg_LidarOdometryUpdate_2To1_Converter.m  pronto_msgs_msg_QuadrupedForceTorqueSensors_1To2_Converter.m  pronto_msgs_msg_QuadrupedStance_2To1_Converter.m  pronto_msgs_msg_VelocityWithSigmaBounds_1To2_Converter.m  pronto_msgs_msg_VelocityWithSigmaBounds_2To1_Converter.m  pronto_msgs_msg_VisualOdometryUpdate_2To1_Converter.m  quadrupedForceTorqueSensors.m  velocityWithSigmaBounds.m  visualOdometryUpdate.m
src/matlab_msg_gen/glnxa64/src/pronto_msgs/src/: pronto_msgs_BipedForceTorqueSensors_message.cpp  pronto_msgs_ControllerFootContact_message.cpp  pronto_msgs_FilterState_message.cpp  pronto_msgs_GPSData_message.cpp  pronto_msgs_IndexedMeasurement_message.cpp  pronto_msgs_JointStateWithAcceleration_message.cpp  pronto_msgs_LidarOdometryUpdate_message.cpp  pronto_msgs_QuadrupedForceTorqueSensors_message.cpp  pronto_msgs_QuadrupedStance_message.cpp  pronto_msgs_VelocityWithSigmaBounds_message.cpp  pronto_msgs_VisualOdometryUpdate_message.cpp
(+1515 files in other folders)
